--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "start": "concurrently \"npm run start --prefix apps/chat-server\" \"npm run start --prefix apps/chat-client\""
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
+    "concurrently": "^8.2.2",
     "prettier": "^3.2.5",
     "turbo": "latest"
   },
