--- a/apps/chat-client/package.json
+++ b/apps/chat-client/package.json
@@ -7,13 +7,14 @@
   },
   "dependencies": {
     "@types/emoji-mart": "^3.0.14",
+    "dotenv": "^16.4.5",
     "emoji-mart": "^5.6.0",
     "emoji-picker-react": "^4.9.4",
-    "node-sass": "^7.0.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
+    "sass": "^1.77.4",
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
