--- a/apps/chat-client/.env.production
+++ b/apps/chat-client/.env.production
@@ -1,1 +1,1 @@
-REACT_APP_API_URLL=https://chat-server-06b403e0fcb4.herokuapp.com/
+REACT_APP_API_URL=https://chat-server-06b403e0fcb4.herokuapp.com/
