--- a/apps/chat-client/package.json
+++ b/apps/chat-client/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@types/emoji-mart": "^3.0.14",
+    "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "emoji-mart": "^5.6.0",
     "emoji-picker-react": "^4.9.4",
